--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="computerimages">
              <img src="./Images/rock.png" alt="rock" class="imgs"> 
              <img src="./Images/paper.png" alt="paper" class="imgs">
-             <img src="./Images/paper.png" alt="scissors" class="imgs">
+             <img src="./Images/scissors.png" alt="scissors" class="imgs">
           </div>
      </div>
 
